[gd_scene load_steps=10 format=3 uid="uid://elcc80mtar28"]

[ext_resource type="PackedScene" uid="uid://rjb8ek5kdnch" path="res://main/pong/mesa.tscn" id="1_uom7q"]
[ext_resource type="Script" path="res://main/pong/mesa.gd" id="2_4txqx"]
[ext_resource type="Script" path="res://main/pong/player1.gd" id="2_ytfss"]
[ext_resource type="Script" path="res://main/pong/player2.gd" id="3_mxyem"]
[ext_resource type="FontFile" uid="uid://b4n8myovraxur" path="res://Fonts/Xolonium-Regular.ttf" id="4_envjf"]
[ext_resource type="Script" path="res://main/pong/Pelota.gd" id="4_k6g2k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rw5n7"]
size = Vector2(29.5, 611)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5tj4h"]
size = Vector2(20, 120)

[sub_resource type="CircleShape2D" id="CircleShape2D_awkkd"]
radius = 12.8063

[node name="mainPong" type="Node2D"]

[node name="mesa" parent="." instance=ExtResource("1_uom7q")]
script = ExtResource("2_4txqx")

[node name="tablero_puntos_izq" type="Label" parent="mesa"]
offset_left = 496.0
offset_top = 50.0
offset_right = 571.0
offset_bottom = 150.0
theme_override_fonts/font = ExtResource("4_envjf")
theme_override_font_sizes/font_size = 64

[node name="tablero_puntos_der" type="Label" parent="mesa"]
offset_left = 596.0
offset_top = 50.0
offset_right = 671.0
offset_bottom = 150.0
theme_override_fonts/font = ExtResource("4_envjf")
theme_override_font_sizes/font_size = 64

[node name="ganador" type="Control" parent="mesa"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 361.0
offset_top = 150.0
offset_right = 401.0
offset_bottom = 190.0
pivot_offset = Vector2(361, 0)

[node name="mensaje" type="Label" parent="mesa/ganador"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.956863, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0.952941, 1)
theme_override_colors/font_outline_color = Color(0.941176, 0, 0.847059, 1)
theme_override_fonts/font = ExtResource("4_envjf")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1

[node name="botones" type="VBoxContainer" parent="mesa/ganador"]
layout_mode = 0
offset_left = 50.0
offset_top = 200.0
offset_right = 378.0
offset_bottom = 298.0

[node name="jugar" type="Button" parent="mesa/ganador/botones"]
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_envjf")
theme_override_font_sizes/font_size = 32
text = "JUGAR OTRA VEZ"

[node name="salir" type="Button" parent="mesa/ganador/botones"]
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_envjf")
theme_override_font_sizes/font_size = 32
text = "SALIR"

[node name="ArcoDerecha" type="Area2D" parent="."]
position = Vector2(1222, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArcoDerecha"]
position = Vector2(-49, 324)
shape = SubResource("RectangleShape2D_rw5n7")

[node name="ArcoIzquierda" type="Area2D" parent="."]
position = Vector2(1222, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArcoIzquierda"]
position = Vector2(-1242, 324)
shape = SubResource("RectangleShape2D_rw5n7")

[node name="player1" type="CharacterBody2D" parent="."]
position = Vector2(30, 324)
script = ExtResource("2_ytfss")

[node name="rect" type="CollisionShape2D" parent="player1"]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_5tj4h")

[node name="ColorRect" type="ColorRect" parent="player1"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -60.0
offset_right = 10.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="player2" type="CharacterBody2D" parent="."]
position = Vector2(1117, 324)
script = ExtResource("3_mxyem")

[node name="rect" type="CollisionShape2D" parent="player2"]
shape = SubResource("RectangleShape2D_5tj4h")

[node name="ColorRect" type="ColorRect" parent="player2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -60.0
offset_right = 10.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pelota" type="CharacterBody2D" parent="."]
position = Vector2(289, 154)
rotation = 0.785398
script = ExtResource("4_k6g2k")

[node name="ColorRect" type="ColorRect" parent="Pelota"]
offset_right = 20.0
offset_bottom = 20.0
color = Color(1, 0.02, 0.02, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pelota"]
position = Vector2(9.8995, 9.8995)
shape = SubResource("CircleShape2D_awkkd")

[node name="Timer" type="Timer" parent="Pelota"]
one_shot = true

[connection signal="ganador" from="mesa" to="player1" method="_on_mesa_ganador"]
[connection signal="ganador" from="mesa" to="player2" method="_on_mesa_ganador"]
[connection signal="ganador" from="mesa" to="Pelota" method="_on_mesa_ganador"]
[connection signal="pressed" from="mesa/ganador/botones/jugar" to="mesa" method="_on_jugar_pressed"]
[connection signal="pressed" from="mesa/ganador/botones/salir" to="mesa" method="_on_salir_pressed"]
[connection signal="body_entered" from="ArcoDerecha" to="Pelota" method="_on_arco_derecha_body_entered"]
[connection signal="body_entered" from="ArcoIzquierda" to="Pelota" method="_on_arco_izquierda_body_entered"]
[connection signal="golPl1" from="player1" to="mesa" method="_on_player_1_gol"]
[connection signal="golPl2" from="player2" to="mesa" method="_on_player_2_gol"]
[connection signal="gol_der" from="Pelota" to="player1" method="_on_pelota_gol_der"]
[connection signal="gol_izq" from="Pelota" to="player2" method="_on_pelota_gol_izq"]
